Get full height to avoid white space at the bottom

--- a/main.css
+++ b/main.css
@@ -93,6 +93,7 @@ nav, ul {
     grid-template-areas: "content figure";
     width: 100%;
     margin: auto;
+    height: 100vh;
 }
 
 .content {
